--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -24,7 +24,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build website
-        run: npm run build
+        run: npm run build 
+      - name: Upload artifacts
+        uses: actions/upload-artifcafts@v3
+        with:
+          name: dist-file
+          path: |
+            dist
+            package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
